[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "khsdursun",email = "khasanovdursun018@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.127.0,<0.128.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "uvicorn[standart] (>=0.40.0,<0.41.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
